tests/sumo/errors/empty_line/errors.sumo
Error: Attribute 'line' in definition of trip 'v0' is empty.
Quitting (on error).
